# ios_local_notification

./: .project  Cargo.toml  README.md  build.rs
ios/: Package.swift
ios/Sources/LocalNotification/: LocalNotification.swift
src/: lib.rs
